--- a/index.html
+++ b/index.html
@@ -8,8 +8,31 @@
 </head>
 <body>
      <main class="main-contenedor">
-         <div class="logo-contenedor">  </div>
-         <div class="form-contenedor">  </div> 
+         <div class="logo-contenedor">
+             <div class="logo-contenedor-img">
+                 <img src="" alt="">
+             </div>
+             <div class="logo-contenedor-titulo">
+                 Spotify
+             </div>
+         </div>
+         <div class="form-contenedor">
+             <form class="form-contenedor-1">
+                 <input type="text" id="form-usename" placeholder="Username">
+                 <br>
+                 <input type="password" id="form-password" placeholder="Password">
+                 <p class="form-forgot">Forgot password?</p>
+                 <button>Sign In</button>
+             </form>
+         </div> 
+         <div class="social-contenedor">
+             <p class="social-contenedor-text">Be Correct With</p>
+             <img class="facebook-logo" src="" alt="">
+             <img class="google-logo" src="" alt="">
+         </div>
+         <div class="sign-up">
+             <p>Don't have an account?<a href="#">Sign Up</a></p>
+         </div>
      </main>
 </body>
 </html>
