--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <main class="main-contenedor">
          <div class="logo-contenedor">
              <div class="logo-contenedor-img">
-                 <img src="" alt="">
+                 <img class="logo-spotify" src="/Spotify-mobile/img/spotify-brands.svg" alt="logo-spotify">
              </div>
              <div class="logo-contenedor-titulo">
                  Spotify
@@ -28,8 +28,8 @@
          </div> 
          <div class="social-contenedor">
              <p class="social-contenedor-text">Be Correct With</p>
-             <img class="facebook-logo" src="" alt="">
-             <img class="google-logo" src="" alt="">
+             <img class="facebook-logo" src="/Spotify-mobile/img/facebook-brands.svg" alt="facebook-logo">
+             <img class="google-logo" src="/Spotify-mobile/img/google-brands.svg" alt="google-logo">
          </div>
          <div class="sign-up">
              <p>Don't have an account?<a href="#">Sign Up</a></p>
