--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
-    <link rel="stylesheet" href="/Spotify-mobile/styles/styles.scss">
+    <link rel="stylesheet" href="/Spotify-mobile/styles/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -18,7 +21,7 @@
                 <img class="logo-spotify" src="/Spotify-mobile/img/spotify-brands.svg" alt="logo-spotify">
             </div>
             <div class="logo-contenedor-titulo">
-                Spotify
+                <p class="logo-contenedor-text">Spotify</p>
             </div>
         </div>
         <div class="form-contenedor">
