--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
@@ -26,9 +26,8 @@
         </div>
         <div class="form-contenedor">
             <form class="form-contenedor-1">
-                <input type="text" id="form-usename" placeholder="Username">
-                <br>
-                <input type="password" id="form-password" placeholder="Password">
+                <input class="form-username" type="text" id="form-username" placeholder="Username">
+                <input class="form-password"  type="password" id="form-password" placeholder="Password">
                 <p class="form-forgot">Forgot password?</p>
                 <button>Sign In</button>
             </form>
