--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <input class="form-username" type="text" id="form-username" placeholder="Username">
                 <input class="form-password"  type="password" id="form-password" placeholder="Password">
                 <p class="form-forgot">Forgot password?</p>
-                <button>Sign In</button>
+                <button class="btn-sign">Sign In</button>
             </form>
         </div>
         <div class="social-contenedor">
@@ -38,7 +38,7 @@
             <img class="google-logo" src="/Spotify-mobile/img/google-brands.svg" alt="google-logo">
         </div>
         <div class="sign-up">
-            <p>Don't have an account?<a href="#">Sign Up</a></p>
+            <p>Don't have an account? <a href="#">Sign Up</a></p>
         </div>
     </main>
 </body>
